--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "postcss": "^8.4.14",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.1.6"
   }
 }
